@@ -1,4 +1,4 @@
-.TH vifm 1 "May 01, 2015" "" "Vifm"
+.TH vifm 1 "May 04, 2015" "" "Vifm"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -2582,6 +2582,10 @@ Same as %m, but l (or Enter) key is handled like for :locate and :find commands.
 .TP
 .BI %u
 Process command output as list of paths and compose custom view out of it.
+.TP
+.BI %U
+Same as %u, but implies less list updates inside vifm, which is absence of
+sorting at the moment.
 .TP
 .BI %S
 Show command output in the status bar.
